[package]
name = "JSON2MD"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "json2md"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
handlebars = "6.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
rquickjs = { version = "0.11", features = ["macro", "parallel"], optional = true }
libloading = {version ="0.9", optional = true }

[features]
default = []
# Use `dep:` prefix for optional dependencies in feature declaration
dynamic-helpers = ["dep:rquickjs", "dep:libloading"]
